# AI_Agents_crash_course

./: README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
aihero/: README.md  pyproject.toml
aihero/aihero/: pyproject.toml
aihero/aihero/src/: app.py  ingest.py  main.py  search_agent.py  search_tools.py
aihero/course/: course_day1.ipynb  course_day2.ipynb  day2_chunks.ipynb  day3_text_search.ipynb  day3_text_vector_hybrid_search.ipynb  day4_agents.ipynb  day5_evaluation.ipynb  example.md  pyproject.toml
aihero/src/: app.py  ingest.py  logs.py  main.py  search_agent.py
